atualizado a estrutura e versão do projeto

--- a/login-v1/login.html
+++ b/login-v1/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login 3</title>
 </head>
 <body>
-    <div class="div">
+    <div class="">
         <form>
             <h1>Login</h1>
             <input type="text" id="email" placeholder="Email">
@@ -14,6 +14,6 @@
             <button id="entrar">Entrar</button>
         </form>
     </div>
-    <script src="./login2.js"> </script>
+    <script src="./login.js"> </script>
 </body>
 </html>
