--- a/login-v2/login.html
+++ b/login-v2/login.html
@@ -6,7 +6,7 @@
     <title>Login 3</title>
 </head>
 <body>
-    <div class="div">
+    <div class="">
         <form>
             <h1>Login</h1>
             <input type="text" id="email" placeholder="Email">
@@ -14,6 +14,6 @@
             <button id="entrar">Entrar</button>
         </form>
     </div>
-    <script src="./login3.js"> </script>
+    <script src="./login.js"> </script>
 </body>
 </html>
