--- a/login-v1/login.html
+++ b/login-v1/login.html
@@ -10,12 +10,14 @@
 <body>
     <div class="">
         <form>
-            <div class="flex bg-primary p-3 text-white" >
+            <div class="flex bg-primary p-3 text-white mb-5" >
                 <h1>Login</h1>
             </div>
-            <input type="text" id="email" placeholder="Email">
-            <input type="password" id="senha"  placeholder="Email">
-            <button id="entrar">Entrar</button>
+            <div class="container mt-3">
+                <input type="text"     id="email" placeholder="Email" class="form-contrl">
+                <input type="password" id="senha"  placeholder="Email" class="form-contrl">
+                <button class="btn btn-primary" id="entrar">Entrar</button>
+            </div>
         </form>
     </div>
     <script src="./login.js"> </script>
