--- a/login-v1/dashboard.html
+++ b/login-v1/dashboard.html
@@ -8,7 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Parabéns você é administrador</h1>
-    <a href="login.html">Sair</a>
+    <div class="bg-success p-3 roundend text-white mb-5">
+        <h1>Parabéns você é administrador</h1>
+    </div>
+    <div class="container">
+        <a href="login.html" id="sair">
+            <button class="btn btn-danger" onclick="sair()" >Sair</button>
+        </a>
+    </div>
+
+    <script>
+        function sair(){
+            var res = document.getElementById('#sair');
+            
+            if(res){
+                alert('Saindo ...')
+            }else{
+                alert('Não foi possível sair')
+                return false;
+            }
+        }
+    </script>
 </body>
 </html>
