--- a/login-v1/login.html
+++ b/login-v1/login.html
@@ -14,9 +14,10 @@
                 <h1>Login</h1>
             </div>
             <div class="container mt-3">
-                <input type="text"     id="email" placeholder="Email" class="form-contrl">
-                <input type="password" id="senha"  placeholder="Email" class="form-contrl">
-                <button class="btn btn-primary" id="entrar">Entrar</button>
+                <input type="text"     id="email"  placeholder="Email" class="form-control mb-3">
+                <input type="password" id="senha"  placeholder="*********" class="form-control mb-3">
+                <button class="btn btn-primary w-25" id="entrar">Entrar</button>
+                <button class="btn btn-success w-25" id="cadastrar">Cadastrar</button>
             </div>
         </form>
     </div>
