--- a/login-v1/login.html
+++ b/login-v1/login.html
@@ -16,8 +16,10 @@
             <div class="container mt-3">
                 <input type="text"     id="email"  placeholder="Email" class="form-control mb-3">
                 <input type="password" id="senha"  placeholder="*********" class="form-control mb-3">
-                <button class="btn btn-primary w-25" id="entrar">Entrar</button>
-                <button class="btn btn-success w-25" id="cadastrar">Cadastrar</button>
+                <div class="row d-flex gap-3 justify-content-center">
+                    <button class="btn btn-primary w-25" id="entrar">Entrar</button>
+                    <button class="btn btn-success w-25" id="cadastrar">Cadastrar</button>
+                </div>
             </div>
         </form>
     </div>
