--- a/login-v2/cadastro.html
+++ b/login-v2/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar</title>
+    <title>Cadastrar v2</title>
 </head>
 <body>
     <div class="bg-success p-3 roundend text-white mb-5">
